k8s/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,authorization
                    max_age: "1728000"
                    expose_headers: grpc-status,grpc-message
                  routes:
                  - match:
                      prefix: "/api/v1/history"
                    route:
                      cluster: analytics_api_service
                  - match:
                      prefix: "/api/v1/analytics"
                    route:
                      cluster: analytics_api_service
                  - match:
                      prefix: "/api/v1/user/history"
                    route:
                      cluster: analytics_api_service
                  - match:
                      prefix: "/api/v1/shorten"
                    route:
                      cluster: write_api_service
                  - match:
                      prefix: "/api/v1"
                    route:
                      cluster: write_api_service
                  - match:
                      prefix: "/"
                    route:
                      cluster: frontend_service
              http_filters:
              - name: envoy.filters.http.jwt_authn
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  providers:
                    google_identity_provider:
                      issuer: "https://accounts.google.com"
                      remote_jwks:
                        http_uri:
                          uri: "https://www.googleapis.com/oauth2/v3/certs"
                          cluster: google_jwks_cluster
                          timeout: 5s
                        cache_duration: 3600s
                      claim_to_headers:
                        - header_name: "x-user-id"
                          claim_name: "sub"
                  rules:
                    - match:
                        prefix: "/api/v1/history"
                      requires:
                        provider_name: google_identity_provider
                    - match:
                        prefix: "/api/v1/user/history"
                      requires:
                        provider_name: google_identity_provider
                    - match:
                        prefix: "/api/v1/shorten"
                      requires:
                        requires_any:
                          requirements:
                            - provider_name: google_identity_provider
                            - allow_missing: {}
              - name: envoy.filters.http.cors
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
              - name: envoy.filters.http.local_ratelimit
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                  stat_prefix: http_local_rate_limiter
                  token_bucket:
                    max_tokens: 100
                    tokens_per_fill: 100
                    fill_interval: 1s
                  filter_enabled:
                    runtime_key: local_rate_limit_enabled
                    default_value:
                      numerator: 100
                      denominator: HUNDRED
                  filter_enforced:
                    runtime_key: local_rate_limit_enforced
                    default_value:
                      numerator: 100
                      denominator: HUNDRED
                  response_headers_to_add:
                  - header:
                      key: x-local-rate-limit
                      value: 'true'
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: google_jwks_cluster
        connect_timeout: 5s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: google_jwks_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: www.googleapis.com
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: www.googleapis.com
      - name: write_api_service
        connect_timeout: 5s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: write_api_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: write-api
                    port_value: 80
      - name: analytics_api_service
        connect_timeout: 5s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: analytics_api_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: analytics-api
                    port_value: 80
      - name: frontend_service
        connect_timeout: 5s
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: frontend_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: frontend
                    port_value: 80
